Fix content overflow on smaller screens
Changes to input-items and input-field improved responsiveness up to a dimension of 218 x 892

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ input {
   border-radius: 0.375rem;
   border: none;
   background-color: var(--primary-section);
+  width: 90%;
 }
 
 footer {
@@ -205,11 +206,12 @@ footer p {
 .input-items {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   border: 1px solid var(--input-border);
   padding: 0.5rem;
   border-radius: 10px;
   margin: 0.3rem 0;
+  width: 100%;
 }
 
 .input-fields {
@@ -219,6 +221,7 @@ footer p {
   gap: 0.5rem;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
 }
 
 .input-fields label {
@@ -306,12 +309,17 @@ small {
   .checks-field {
     flex-direction: row;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 1rem;
+    padding-right: 40px;
+    margin-left: -10px;
+  }
+  .ratio-result{
+    padding-left: 40px;
+    margin-top: -15px;
   }
   .result-row {
     flex-direction: row;
     align-items: flex-start;
-    gap: 1rem;
   }
 
   .error-box {
